# equipments-clone

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-azure.yml  test.yml
docs/: azure-deployment.md
infra/: container-app.bicep  registry.bicep
src/equipments_clone/: __init__.py  main.py
tests/: test_contract.py  test_gherkin_contract.py  test_live_deployment_gherkin.py
tests/features/: auth.feature  demo.feature  dev-tools.feature  inventory.feature  public-routes.feature  reservations.feature
tests/live_features/: live-deployment.feature
