[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "equipments-clone"
version = "0.1.0"
description = "Python/FastAPI clone of the AgenticFun Equipments service from public docs and Gherkin contracts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "pyjwt>=2.8",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-bdd>=8.1",
    "ruff>=0.5",
]

[project.scripts]
equipments-clone = "equipments_clone.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
